--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-plotly
-joblib
-gdown
+streamlit==1.45.1
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+plotly==5.22.0
+joblib==1.4.2
+gdown==5.2.0
 scikit-learn==1.4.2
-imbalanced-learn
+imbalanced-learn==0.12.0
